[package]
name = "snowstorm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros", "ws", "headers"] }
bcrypt = "0.15.0"
boringtun = "0.6.0"
csv = "1.3.0"
dotenv = "0.15.0"
eyre = "0.6.9"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
oauth2 = "4.4.2"
parking_lot = "0.12.1"
perfect_rand = "0.1.5"
pnet = "0.34.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = "1.0.193"
serde_json = "1.0.108"
simd-json = "0.13.4"
socks = "0.3.4"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "macros", "uuid"] }
time = { version = "0.3.30", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tower-sessions = "0.6.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["serde", "rand", "v4"] }
azalea-protocol = { git = "https://github.com/azalea-rs/azalea.git" }
bytes = "1.5.0"
