[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
snowstorm = { version = "0.1.0", path = "crates/snowstorm" }
bunger = { version = "0.1.0", path = "crates/bunger" }
database = { version = "0.1.0", path = "crates/database" }
common = { version = "0.1.0", path = "crates/common" }
io = { version = "0.1.0", path = "crates/io" }
jwt = { version = "0.1.0", path = "crates/jwt" }
web = { version = "0.1.0", path = "crates/web" }
scheduling = { version = "0.1.0", path = "crates/scheduling" }
discord = { version = "0.1.0", path = "crates/discord" }
config = { version = "0.1.0", path = "crates/config" }
axum = { version = "0.6.20", features = ["macros", "ws", "headers"] }
bcrypt = "0.15.0"
boringtun = "0.6.0"
csv = "1.3.0"
eyre = "0.6.9"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
oauth2 = "4.4.2"
parking_lot = "0.12.1"
perfect_rand = "0.1.5"
pnet = "0.34.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = "1.0.193"
serde_json = "1.0.108"
simd-json = "0.13.4"
socks = "0.3.4"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
] }
time = { version = "0.3.30", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tower-sessions = "0.6.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
azalea-protocol = { git = "https://github.com/azalea-rs/azalea.git" }
bytes = "1.5.0"
clap = { version = "4.4.17", features = ["derive"] }
libc = "0.2.152"
tracing = "0.1.40"
default-net = "0.21.0"
pnet_macros_support = "0.34.0"
uuid = "1.7.0"
enum-utils = "0.1.2"
dashmap = { version = "5.5.3", features = ["rayon"] }
rayon = "1.8.1"
serenity = "0.12.0"
chrono = "0.4.34"
pretty-duration = "0.1.1"
toml = "0.8.10"
smart-default = "0.7.1"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
