[package]
name = "discord"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true }
jwt = { workspace = true }
config = { workspace = true }
sqlx = { workspace = true }
eyre = { workspace = true }
uuid = { workspace = true }
serenity = { workspace = true }
tokio = { workspace = true }
pretty-duration = { workspace = true }
chrono = { workspace = true }
