[package]
name = "io"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true }
common = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
csv = { workspace = true }
dotenvy_macro = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
boringtun = { workspace = true }
azalea-protocol = { workspace = true }
pnet = { workspace = true }
bytes = { workspace = true }
perfect_rand = { workspace = true }
serde = { workspace = true }