[package]
name = "scheduling"
version = "0.1.0"
edition = "2021"

[dependencies]
io = { workspace = true }
database = { workspace = true }
web = { workspace = true }
common = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
dotenvy_macro = { workspace = true }
eyre = { workspace = true }
rand = { workspace = true }
enum-utils = { workspace = true }
sqlx = { workspace = true }