[package]
name = "scheduling"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true }
common = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
rand = { workspace = true }
enum-utils = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
