[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
database = { workspace = true }
io = { workspace = true }
jwt = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
urlencoding = { workspace = true }
time = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
dotenvy_macro = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bcrypt = { workspace = true }
oauth2 = { workspace = true }
uuid = { workspace = true }